@@ -1,3 +1,5 @@
+* Agent Console: recognize call attributes that are HTTP URLs, and display them
+  as hyperlinks.
 * Dialer: merge fix to prevent stale pidfile that happens to match an active 
   process from making the daemon hang on startup. See Elastix bug #356. 
 * Agent Console: add interface for scheduling of calls to particular agents. 
